# campus-erp

./: .gitignore  CMakeLists.txt  IMPROVEMENTS.md  README.md
data/: History.txt
src/: Project.cpp  constants.h  menus.cpp  menus.h  records.cpp  records.h  utils.cpp  utils.h
